# hyperFEM

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  parsers_control.py  parsers_mesh.py  repomix.config.json  run_build_and_test.py  vcpkg.json
build_scripts/: BUILD_README.md  BUILD_README_cn.md  VCPKG_INSTALL_README.md  build.bat  build.sh  vcpkg_install.bat  vcpkg_install.sh
case/: exported_nodes_only.xfem  exported_sets.xfem  node.xfem  node_and_element.xfem  roundtrip_test.xfem  test_elements.xfem  test_explicit.jsonc  test_new_syntax.jsonc  test_new_syntax.xfem  test_sets.xfem
case/hex8r_mat1/: control.json
case/huge_model/: control.json
case/orth_c3d4/: control.json
data_center/: AppSession.h  DataContext.h  DofMap.h  ElementRegistry.h  PartGraph.h  TopologyData.h  mesh.h
data_center/components/: analysis_component.h  load_components.h  material_components.h  mesh_components.h  property_components.h  simdroid_components.h
docs/: datacenter.md  declarative_parser_architecture.md  json_format_reference.md  json_migration_summary.md  vtu_format.md
python_jax/: README.md  demo_tl_explicit.py
reference/: vuel_aligned.for  vuel_unified.for
system/: main.cpp  main0_explicit.cpp  main0_explicit.h
system/analysis/: GraphAnalyzer.h  GraphBuilder.h  MermaidReporter.h
system/assemble/: AssemblySystem.cpp  AssemblySystem.h
system/curve/: CurveSystem.cpp  CurveSystem.h
system/dof/: DofNumberingSystem.cpp  DofNumberingSystem.h
system/element/c3d8r/: C3D8RStiffnessMatrix.cpp  C3D8RStiffnessMatrix.h
system/explicit/: ExplicitSolver.cpp  ExplicitSolver.h
system/exporter_base/: exporterBase.cpp  exporterBase.h
system/exporter_simdroid/: SimdroidExporter.cpp  SimdroidExporter.h
system/force/: InternalForceSystem.cpp  InternalForceSystem.h
system/force/c3d8r/: C3D8RInternalForce.cpp  C3D8RInternalForce.h
system/load/: LoadSystem.cpp  LoadSystem.h
system/mass/: MassSystem.cpp  MassSystem.h
system/mass/c3d8/: C3D8Mass.cpp  C3D8Mass.h
system/mass/c3d8r/: C3D8RMass.cpp  C3D8RMass.h
system/mass/gauss/: GaussIntegration.cpp  GaussIntegration.h
system/material/mat1/: LinearElasticMatrixSystem.cpp  LinearElasticMatrixSystem.h
system/mesh/: TopologySystems.cpp  TopologySystems.h  element_exporter.cpp  element_exporter.h  element_parser.cpp  element_parser.h  node_exporter.cpp  node_exporter.h  node_parser.cpp  node_parser.h  set_exporter.cpp  set_exporter.h  set_parser.cpp  set_parser.h
system/output/: VtuExporter.cpp  VtuExporter.h
system/parser_base/: BlockHandler.h  GenericLineParser.h  parserBase.cpp  parserBase.h  string_utils.h
system/parser_json/: JsonParser.cpp  JsonParser.h
system/parser_simdroid/: SimdroidParser.cpp  SimdroidParser.h
system/simdroid/: SimdroidInspector.h
test/: CMakeLists.txt  run_tests.bat  run_tests.sh  test_assembly_system.cpp
